# np-stream

./: pyproject.toml  readme.md
np_stream/: benchmark.py  npy.py  test.py  utils.py
npz_stream/: __init__.py  npy.py  npy_utils.py  npz.py  shared.py  test.py  utils.py  zip.py
